updated copyAllureProperties